# Tetris

./: CMakeLists.txt  README.md  main.cpp
include/: Blocks_system.h  Game.h  I_polyomino.h  J_polyomino.h  L_polyomino.h  O_polyomino.h  S_polyomino.h  Structures.h  T_polyomino.h  Tetrimino.h  Z_polyomino.h
src/: Blocks_system.cpp  Game.cpp  I_polyomino.cpp  J_polyomino.cpp  L_polyomino.cpp  O_polyomino.cpp  S_polyomino.cpp  T_polyomino.cpp  Tetrimino.cpp  Z_polyomino.cpp
